--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Designing the future">
+    <meta name="author" content="Mr.Pasiya">
+    <meta property="og:title" content="Mr.Pasiya">
+    <meta property="og:description" content="Create & market with IT Experts">
+    <meta property="og:author" content="Mr.Pasiya">
+    <meta property="og:image" content="/assets/icon/favicon.png">
+
     <title>Mr.Pasiya</title>
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.png">
     <link rel="stylesheet" href="/Css/style.css">
+
     <script src="https://kit.fontawesome.com/189fecdd3d.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 
 <body>
@@ -16,7 +28,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/assets/logos/logo.png" class="logo">
+                <img src="/assets/logos/Logo.webp" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,13 +50,15 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/assets/personal/user.png">
+                    <img src="/assets/personal/user.webp">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>I'm an undergraduate BICT student at Rajarata University in Sri Lanka right now. continually
                         picking up new knowledge and improving my skills to become an excellent developer and designer.
-                        In addition to my studies, I self-study, construct, and test both new and old items. And I work as a Director and Web Developer at <a href="https://www.wrenix.com/" class="wrenix">Wrenix</a> right now.</p>
+                        In addition to my studies, I self-study, construct, and test both new and old items. And I work
+                        as a Director and Web Developer at <a href="https://www.wrenix.com/" class="wrenix">Wrenix</a>
+                        right now.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -94,9 +108,11 @@
                     <a href="#">Learn more</a>
                 </div>
                 <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-post-fill" viewBox="0 0 16 16" style="margin-bottom: 30px;">
-                        <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M4.5 3h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1m0 2h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-8a.5.5 0 0 1 .5-.5"/>
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+                        class="bi bi-file-post-fill" viewBox="0 0 16 16" style="margin-bottom: 30px;">
+                        <path
+                            d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M4.5 3h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1m0 2h7a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-8a.5.5 0 0 1 .5-.5" />
+                    </svg>
                     <h2>POS System Design</h2>
                     <p>Description</p>
                     <a href="#">Learn more</a>
@@ -111,7 +127,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/assets/projects/work-1.png">
+                    <img src="/assets/projects/work-1.webp">
                     <div class="layer">
                         <h3>Social Media app</h3>
                         <p>Description about app</p>
@@ -119,7 +135,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/assets/projects/work-2.png">
+                    <img src="/assets/projects/work-2.webp">
                     <div class="layer">
                         <h3>music App</h3>
                         <p>Description about app</p>
@@ -127,7 +143,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/assets/projects/work-3.png">
+                    <img src="/assets/projects/work-3.webp">
                     <div class="layer">
                         <h3>Online Shopping Appp</h3>
                         <p>Description about app</p>
@@ -139,7 +155,7 @@
         </div>
     </div>
     <!-- -----------------contact----------------- -->
-     <div id="contact">
+    <div id="contact">
         <div class="container">
             <div class="row">
                 <div class="contact-left">
@@ -147,62 +163,66 @@
                     <p><i class="fa-solid fa-paper-plane"></i>contactme@example.com</p>
                     <p><i class="fa-solid fa-phone-volume"></i>+94 70 213 7000</p>
                     <div class="social-icons">
-                        <a href="https://web.facebook.com/pasidu.sachintha.1/" class="facebook"> <i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://x.com/MrPasiya0" class="twitter"> <i class="fa-brands fa-square-twitter"></i></a>
-                        <a href="https://www.instagram.com/mr.pasiya_a/" class="insta"><i class="fa fa-instagram instagram" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/pasidu-sachintha-982448288/" class="linkedin"> <i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/Pasidu09-SL" class="github"> <i class="fa-brands fa-square-github"></i></a>
+                        <a href="https://web.facebook.com/pasidu.sachintha.1/" class="facebook"> <i
+                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://x.com/MrPasiya0" class="twitter"> <i
+                                class="fa-brands fa-square-twitter"></i></a>
+                        <a href="https://www.instagram.com/mr.pasiya_a/" class="insta"><i
+                                class="fa fa-instagram instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/pasidu-sachintha-982448288/" class="linkedin"> <i
+                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/Pasidu09-SL" class="github"> <i
+                                class="fa-brands fa-square-github"></i></a>
                     </div>
                     <a href="#" download class="button button2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form >
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <input type="text" name="Subject" placeholder="Subject">
-                        <textarea name="Message" rows="6" placeholder="Your Message" required></textarea>
-                        <button type="submit" class="button button2" onclick="click()">Submit</button>
+                    <form id="contact-form">
+                        <input type="text" name="Name" id="name" placeholder="Your Name" required>
+                        <input type="email" name="Email" id="email" placeholder="Your Email" required>
+                        <input type="text" name="Subject" id="subject" placeholder="Subject">
+                        <textarea name="Message" rows="6" id="message" placeholder="Your Message" required></textarea>
+                        <button type="submit" class="button button2 ">Submit</button>
                     </form>
                     <span id="msg"></span>
                 </div>
             </div>
         </div>
         <footer>
-            <img src="/assets/favicon.png">
+            <img src="/assets/icon/favicon.png">
             <p class="copyright">copyright Made by Pasiya © 2024</p>
         </footer>
-     </div>
+    </div>
 
-    <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
-        var sidem = document.getElementById("sidemenu")
+    <script src="/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("cT7HiVfepeiACZYll");
+        })();
+    </script>
+    <script type="text/javascript">
+        document.getElementById('contact-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const name = document.getElementById('name').value
+            const email = document.getElementById('email').value
+            const message = document.getElementById('message').value
+            const subject = document.getElementById('subject').value
 
-        const msg = document.getElementById("msg")
-        function click(){
-            msg.innerHTML = "Message Submit Successful"
-            setTimeout(function(){
-                msg.innerHTML=""
-            },5000)
-            form.reset()
-        }
-
-        function opentab(tabname) {
-            for (tablink of tablinks) {
-                tablink.classList.remove("active-link");
+            const template = {
+                name:name,
+                email:email,
+                message:message,
+                subject:subject
             }
-            for (tabcontent of tabcontents) {
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
-        }
-        function openmenu(){
-            sidem.style.right = "0";
-        }
-        function closemenu(){
-            sidem.style.right = "-200px";
-        }
+            emailjs.send('service_647f3ya', 'template_15puhbk', template)
+                .then(function () {
+                    console.log('Message sent successfully!');
+                }, function (error) {
+                    console.log('Failed to send message. Please try again.');
+                    console.log('FAILED...', error);
+                });
+        });
     </script>
 </body>
 
