--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <a href="https://github.com/Pasidu09-SL" class="github"> <i
                                 class="fa-brands fa-square-github"></i></a>
                     </div>
-                    <a href="#" download class="button button2">Download CV</a>
+                    <a href="/assets/personal/my-cv.pdf" download class="button button2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form id="contact-form">
