--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <a href="https://github.com/Pasidu09-SL" class="github" target="_blank"> <i
                                 class="fa-brands fa-square-github"></i></a>
                     </div>
-                    <a href="/assets/personal/my-cv.pdf" download class="button">Download CV <i class="fa-solid fa-file"></i></a>
+                    <a href="/assets/personal/my-cv.pdf" download class="button">Download CV <i class="fa-solid fa-file-arrow-down"></i></a>
                 </div>
                 <div class="contact-right">
                     <form id="contact-form">
