--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <path
                             d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708" />
                     </svg></button>
+                    <button id="toggleButton" class="mouse-ripple"><i class="fa-solid fa-arrow-pointer"></i></button>
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
@@ -103,11 +104,11 @@
         <h1 class="sub-title bounce" onload="loadSkills()">My Skills</h1>
         <section>
             <div class="container1">
-                <h1 class="heading">Technical skills</h1>
+                <h1 class="heading" id="tech-bars">Technical skills</h1>
                 <div class="technical-bars">
                     <div class="bar"><i class="fa-brands fa-html5" style="color:#c95d2e"></i>
                         <div class="info"><span>HTML</span></div>
-                        <div class="progrss-line html">
+                        <div class="progrss-line html" id="tech-bar">
                             <span></span>
                         </div>
                     </div>
@@ -270,8 +271,8 @@
                                 class="fa-brands fa-square-twitter"></i></a>
                         <a href="https://www.instagram.com/mr.pasiya_a/" class="insta" target="_blank"><i
                                 class="fa-brands fa-square-instagram instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/pasidu-sachintha-982448288/" class="linkedin"> <i
-                                class="fa-brands fa-linkedin" target="_blank"></i></a>
+                        <a href="https://www.linkedin.com/in/pasidu-sachintha-982448288/" class="linkedin" target="_blank"> <i
+                                class="fa-brands fa-linkedin" ></i></a>
                         <a href="https://github.com/Pasidu09-SL" class="github" target="_blank"> <i
                                 class="fa-brands fa-square-github"></i></a>
                     </div>
