--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <p>This platform aims to streamline the process of reporting,
                             searching, and recovering lost items, reducing the manual effort and errors associated with
                             traditional methods. By leveraging modern web technologies.It's still developing.</p>
-                        <a href="#portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://github.com/Pasidu09-SL/IFound-System"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -241,7 +241,7 @@
                     <div class="layer">
                         <h3>Training Cost Calculator</h3>
                         <p>This POS System is used to monitor client training and determine costs.</p>
-                        <a href="#portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://github.com/Pasidu09-SL/Training-Cost-Calculator/tree/main"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -249,7 +249,7 @@
                     <div class="layer">
                         <h3>Store Billing System</h3>
                         <p>This is a store's POS billing system.It's still developing.</p>
-                        <a href="#portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://github.com/Pasidu09-SL/Store-Billing-System"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
