--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:description" content="Designing the future">
     <meta property="og:author" content="Mr.Pasiya">
     <meta property="og:image" content="/assets/icon/favicon.png">
+    <meta property="og:url" content="https://mrpasiya.me">
+    <meta property="og:type" content="website">
 
     <title>Mr.Pasiya</title>
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.png">
