--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
                     <div class="social-icons">
                         <a href="https://web.facebook.com/pasidu.sachintha.1/" class="facebook" target="_blank"> <i
                                 class="fa-brands fa-facebook"></i></a>
-                        <a href="https://x.com/MrPasiya0" class="twitter" target="_blank"> <i
-                                class="fa-brands fa-square-twitter"></i></a>
+                        <a href="https://x.com/MrPasiya0" class="twitter" target="_blank"> <i class="fa-brands fa-square-x-twitter"></i></a>
                         <a href="https://www.instagram.com/mr.pasiya_a/" class="insta" target="_blank"><i
                                 class="fa-brands fa-square-instagram instagram"></i></a>
                         <a href="https://www.linkedin.com/in/pasidu-sachintha-982448288/" class="linkedin" target="_blank"> <i
