--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <!-- -----------------about----------- -->
-    <div id="about">
+    <div id="about" onclick="closemenu()">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
@@ -102,7 +102,7 @@
         </div>
     </div>
     <!-- -----------------my skills----------------- -->
-    <div id="my-skills">
+    <div id="my-skills" onclick="closemenu()">
         <h1 class="sub-title bounce" onload="loadSkills()">My Skills</h1>
         <section>
             <div class="container1">
@@ -192,7 +192,7 @@
     </div>
 
     <!-- -----------------services----------------- -->
-    <div id="services">
+    <div id="services" onclick="closemenu()">
         <div class="container">
             <h1 class="sub-title bounce">My Services</h1>
             <div class="services-list">
@@ -224,7 +224,7 @@
     </div>
 
     <!-- -----------------portfolio----------- -->
-    <div id="portfolio">
+    <div id="portfolio" onclick="closemenu()">
         <div class="container">
             <h1 class="sub-title bounce">My Work</h1>
             <div class="work-list">
@@ -259,7 +259,7 @@
         </div>
     </div>
     <!-- -----------------contact----------------- -->
-    <div id="contact">
+    <div id="contact" onclick="closemenu()">
         <div class="container">
             <div class="row">
                 <div class="contact-left">
