Update mera tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="/assets/icon/favicon.png">
     <meta property="og:url" content="https://mrpasiya.me">
     <meta property="og:type" content="website">
-    <meta name="keywords" content="Web Development, UI/UX Design, Portfolio, Developer, Sri Lanka">
+    <meta name="keywords" content="Web Development, UI/UX Design, Portfolio, Developer, Sri Lanka, Pasidu, Sachintha, Mr.Pasiya, Pasidu Sachintha">
     <meta name="robots" content="index, follow">
 
     <link rel="canonical" href="https://www.mrpasiya.me">
