--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Designing the future">
+    <meta name="description" content="Explore the personal website of Pasidu Sachintha, showcasing skills in web development, UI/UX design, and ongoing projects.">
+    <meta name="description" content="Author: Pasidu Sachintha, Category: Web Developer, Skills: Web Development, UI/UX Design, Experience: Manager at Wrenix, Education: BICT from Rajarata University">
+    <meta name="description" content="Pasidu Sachintha's portfolio features innovative web design projects, including website and various POS systems, demonstrating expertise in modern web technologies.">
+    <meta name="description" content="Services offered by Pasidu Sachintha: Web Design, UI/UX Design, POS System Development, tailored solutions to enhance user experience and functionality.">
+    <meta name="description" content="Pasidu Sachintha: Manager and Web Developer at Wrenix, experienced in creating engaging web applications and enhancing user interfaces. Learn more about professional skills and ongoing projects.">
     <meta name="author" content="Mr.Pasiya">
     <meta property="og:title" content="Mr.Pasiya">
     <meta property="og:description" content="Designing the future">
@@ -83,7 +87,7 @@
                     <p>I'm an undergraduate BICT student at Rajarata University in Sri Lanka right now. continually
                         picking up new knowledge and improving my skills to become an excellent developer and designer.
                         In addition to my studies, I self-study, construct, and test both new and old items. And I work
-                        as a Director and Web Developer at <a href="https://www.wrenix.com/" class="wrenix"
+                        as a Manager and Web Developer at <a href="https://www.wrenix.com/" class="wrenix"
                             target="_blank">Wrenix</a>
                         right now.</p>
                     <div class="tab-titles">
@@ -100,7 +104,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2024 - Current</span><br>Director and Web Developer at <a
+                            <li><span>2024 - Current</span><br>Manager and Web Developer at <a
                                     href="https://www.wrenix.com/" class="wrenix" target="_blank">Wrenix</a></li>
                             <li><span>2022-2023</span><br>Manager at Ashoka Store PVT</li>
                         </ul>
@@ -344,7 +348,7 @@
     <script>
 
         var typed = new Typed('#element', {
-            strings: ['Student at Rajarata Univercity SriLanka', 'Director and Web Developer at <a href="https://www.wrenix.com/" target="_blank">Wrenix</a>'],
+            strings: ['Student at Rajarata Univercity SriLanka', 'Manager and Web Developer at <a href="https://www.wrenix.com/" target="_blank">Wrenix</a>'],
             typeSpeed: 50,
             backSpeed: 50,
             backDelay: 1500,
