update meta tags

--- a/index.html
+++ b/index.html
@@ -13,13 +13,8 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the personal website of Pasidu Sachintha, showcasing skills in web development, UI/UX design, and ongoing projects.">
-    <meta name="description" content="Author: Pasidu Sachintha, Category: Web Developer, Skills: Web Development, UI/UX Design, Experience: Manager at Wrenix, Education: BICT from Rajarata University">
-    <meta name="description" content="Pasidu Sachintha's portfolio features innovative web design projects, including website and various POS systems, demonstrating expertise in modern web technologies.">
-    <meta name="description" content="Services offered by Pasidu Sachintha: Web Design, UI/UX Design, POS System Development, tailored solutions to enhance user experience and functionality.">
-    <meta name="description" content="Pasidu Sachintha: Manager and Web Developer at Wrenix, experienced in creating engaging web applications and enhancing user interfaces. Learn more about professional skills and ongoing projects.">
-    <meta name="author" content="Mr.Pasiya">
+    <meta name="description" content="Explore the personal website of Pasidu Sachintha, showcasing skills in web development, UI/UX design, and ongoing projects. Services include web design, UI/UX design, and POS system development. Manager at Wrenix, BICT from Rajarata University.">
+    <meta name="author" content="Pasidu Sachintha">
     <meta property="og:title" content="Mr.Pasiya">
     <meta property="og:description" content="Designing the future">
     <meta property="og:author" content="Mr.Pasiya">
@@ -29,10 +24,10 @@
     <meta name="keywords" content="Web Development, UI/UX Design, Portfolio, Developer, Sri Lanka, Pasidu, Sachintha, Mr.Pasiya, Pasidu Sachintha">
     <meta name="robots" content="index, follow">
 
-    <link rel="canonical" href="https://www.mrpasiya.me">
     <link rel="canonical" href="https://mrpasiya.me">
 
-    <title>Mr.Pasiya</title>
+    <title>Pasidu Sachintha | Web Developer & UI/UX Designer</title>
+
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.png">
     <link rel="stylesheet" href="/Css/style.css">
 
