--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </nav>
             <div class="header-text">
                 <p>I'm a <span id="element"></span></p>
-                <h1>Hi, I'm <span>Pasidu</span><br>Sachintha From SriLanka</h1>
+                <h1>Hi, I'm <span>Pasidu</span><br>Sachintha From Sri Lanka</h1>
             </div>
         </div>
     </div>
@@ -254,6 +254,8 @@
                                 class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.figma.com/community/file/1405831772672732315/lost-found-system"
                             class="figma" target="_blank"> <i class="fa-brands fa-figma"></i> </a>
+                        <a href="https://ifound.traceit.systems/"
+                            class="figma" target="_blank"> <i class="fa-solid fa-globe"></i> </a>
                         <!-- <a href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
                     </div>
                 </div>
@@ -343,7 +345,7 @@
     <script>
 
         var typed = new Typed('#element', {
-            strings: ['Student at Rajarata Univercity SriLanka', 'Manager and Web Developer at <a href="https://www.wrenix.com/" target="_blank">Wrenix</a>'],
+            strings: ['Student at Rajarata University Sri Lanka', 'Manager and Web Developer at <a href="https://www.wrenix.com/" target="_blank">Wrenix</a>'],
             typeSpeed: 50,
             backSpeed: 50,
             backDelay: 1500,
