--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title bounce">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane pulse"></i>contactme@example.com</p>
+                    <p><i class="fa-solid fa-paper-plane pulse"></i>pasidu@mrpasiya.me</p>
                     <p><i class="fa-solid fa-phone-volume pulse"></i>+94 70 213 7000</p>
                     <div class="social-icons">
                         <a href="https://web.facebook.com/pasidu.sachintha.1/" class="facebook" target="_blank"> <i
